+updated (header slogan scale)

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -122,8 +122,8 @@ $secondary-color: #fff;
             }
 
             &-text {
-                padding: 0;
-                margin: 12px;
+                padding: 12px;
+                margin: 0;
                 border: 1px solid lightgreen;
                 font-family: Montserrat;
                 font-size: 16px;
