--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,5 +1,7 @@
 $primary-color: #998675;
 $secondary-color: #fff;
+$pressed-color: #756557;
+$primary-color2: #c7b299;
 
 .header {
     max-width: 1920px;
@@ -15,7 +17,11 @@ $secondary-color: #fff;
 
     &-logo {
         text-decoration: none;
-        border: 1px solid lightgreen;
+
+        @if $debug==1 {
+            border: 1px solid lightgreen;
+        }
+
         display: flex;
         align-items: center;
 
@@ -29,7 +35,10 @@ $secondary-color: #fff;
             font-family: Raleway;
             font-size: 34px;
             font-weight: 400;
-            border: 1px solid lightgreen;
+
+            @if $debug==1 {
+                border: 1px solid lightgreen;
+            }
         }
 
         &:hover &-img {
@@ -47,19 +56,29 @@ $secondary-color: #fff;
         font-size: 14px;
         font-weight: 300;
         max-width: 700px;
-        border: 1px solid lightgreen;
+
+        @if $debug==1 {
+            border: 1px solid lightgreen;
+        }
 
         &-list {
             display: flex;
             flex-wrap: wrap;
             min-width: 100%;
             list-style: none;
-            border: 1px solid lightcyan;
+
+            @if $debug==1 {
+                border: 1px solid lightcyan;
+            }
+
             padding: 0;
 
             &_item {
                 padding: 8px 15px 8px 15px;
-                border: 1px solid lightseagreen;
+
+                @if $debug==1 {
+                    border: 1px solid lightseagreen;
+                }
 
                 & a {
                     text-decoration: none;
@@ -68,6 +87,14 @@ $secondary-color: #fff;
                     color: $secondary-color;
                     font-size: 14px;
                     font-weight: 300;
+
+                    &:hover {
+                        color: $primary-color2;
+                    }
+
+                    &:active {
+                        color: $primary-color;
+                    }
                 }
             }
         }
@@ -76,7 +103,11 @@ $secondary-color: #fff;
     &-cart {
         width: 24px;
         height: 24px;
-        border: 1px solid lightgreen;
+
+        @if $debug==1 {
+            border: 1px solid lightgreen;
+        }
+
         margin: 14px;
         // display: none;
     }
@@ -84,82 +115,106 @@ $secondary-color: #fff;
     &-search {
         width: 24px;
         height: 24px;
-        border: 1px solid lightgreen;
+
+        @if $debug==1 {
+            border: 1px solid lightgreen;
+        }
+
         margin: 14px;
         // display: none;
     }
 
-    &-slider {
-        border: 1px solid lightcoral;
+    // &-slider {
+    //     border: 1px solid lightcoral;
+    //     min-width: 100%;
+    //     max-width: 100%;
+    //     color: $secondary-color;
+    //     font-family: Raleway;
+
+
+    &-slogan {
+        @if $debug==1 {
+            border: 1px solid lightcoral;
+        }
+
         min-width: 100%;
         max-width: 100%;
         color: $secondary-color;
         font-family: Raleway;
 
+        display: flex;
+        flex-flow: column wrap;
+        justify-content: flex-start;
+        align-items: center;
 
-        &-slogan {
-            display: flex;
-            flex-flow: column wrap;
-            justify-content: flex-start;
-            align-items: center;
+        &-caption-above {
+            font-size: 36px;
+            font-weight: 500;
+            display: block;
+            text-align: center;
+            padding: 7px;
 
-            &-caption-above {
-                font-size: 36px;
-                font-weight: 500;
-                display: block;
-                text-align: center;
-                padding: 7px;
+            @if $debug==1 {
                 border: 1px solid lightgoldenrodyellow;
             }
+        }
 
-            &-caption-below {
+        &-caption-below {
+            @if $debug==1 {
                 border: 1px solid lightcyan;
-                font-size: 52px;
-                font-weight: 700;
-                text-align: center;
-                display: block;
-                padding: 7px;
             }
 
-            &-text {
-                padding: 12px;
-                margin: 0;
+            font-size: 52px;
+            font-weight: 700;
+            text-align: center;
+            display: block;
+            padding: 7px;
+        }
+
+        &-text {
+            padding: 12px;
+            margin: 0;
+
+            @if $debug==1 {
                 border: 1px solid lightgreen;
-                font-family: Montserrat;
-                font-size: 16px;
-                font-weight: 300;
-                line-height: 24px;
-                text-align: center;
-                max-width: 600px;
             }
 
-            &-button {
-                margin: 40px;
-                text-transform: uppercase;
-                text-decoration: none;
-                display: block;
-                max-width: 170px;
-                min-width: 170px;
-                // max-height: 50px;
-                background-color: $primary-color;
-                color: $secondary-color;
-                font-size: 14px;
-                font-weight: 700;
-                line-height: 50px;
-                text-align: center;
-            }
+            font-family: Montserrat;
+            font-size: 16px;
+            font-weight: 300;
+            line-height: 24px;
+            text-align: center;
+            max-width: 600px;
         }
 
-        &-pages {}
-
-        &-arrow-left {
-            display: none;
-        }
-
-        &-arrow-right {
-            display: none;
+        &-button {
+            margin: 40px;
+            text-transform: uppercase;
+            text-decoration: none;
+            display: block;
+            max-width: 170px;
+            min-width: 170px;
+            // max-height: 50px;
+            background-color: $primary-color;
+            color: $secondary-color;
+            font-size: 14px;
+            font-weight: 700;
+            line-height: 50px;
+            text-align: center;
         }
     }
+
+    &-pages {}
+
+    &-arrow-left {
+        display: none;
+    }
+
+    &-arrow-right {
+        display: none;
+    }
+
+    // }
 
 
 }
