--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -2,6 +2,7 @@ $primary-color: #998675;
 $secondary-color: #fff;
 $pressed-color: #756557;
 $primary-color2: #c7b299;
+$showed-color: #736356;
 
 .header {
     max-width: 1920px;
@@ -109,7 +110,23 @@ $primary-color2: #c7b299;
         }
 
         margin: 14px;
-        // display: none;
+        background-color: transparent;
+        border: none;
+        outline: none;
+        padding: 0;
+
+        & svg {
+            fill: $secondary-color;
+            margin: 0 auto;
+        }
+
+        &:hover svg {
+            fill: $primary-color2;
+        }
+
+        &:active svg {
+            fill: $primary-color;
+        }
     }
 
     &-search {
@@ -121,16 +138,24 @@ $primary-color2: #c7b299;
         }
 
         margin: 14px;
-        // display: none;
+        background-color: transparent;
+        border: none;
+        outline: none;
+        padding: 0;
+
+        & svg {
+            fill: $secondary-color;
+            margin: 0 auto;
+        }
+
+        &:hover svg {
+            fill: $primary-color2;
+        }
+
+        &:active svg {
+            fill: $primary-color;
+        }
     }
-
-    // &-slider {
-    //     border: 1px solid lightcoral;
-    //     min-width: 100%;
-    //     max-width: 100%;
-    //     color: $secondary-color;
-    //     font-family: Raleway;
-
 
     &-slogan {
         @if $debug==1 {
@@ -194,13 +219,23 @@ $primary-color2: #c7b299;
             display: block;
             max-width: 170px;
             min-width: 170px;
-            // max-height: 50px;
+            border-radius: 3px;
             background-color: $primary-color;
             color: $secondary-color;
             font-size: 14px;
             font-weight: 700;
             line-height: 50px;
             text-align: center;
+            box-shadow: 0 3px $showed-color;
+
+            &:hover {
+                background-color: $primary-color2;
+            }
+
+            &:active {
+                background-color: $pressed-color;
+                box-shadow: 0 3px $primary-color;
+            }
         }
     }
 
